Fix wrong margins on QML-based KCMs

Previous layouting relied on the page GridLayout's spacing and
global contents margins to set components spatially. This breaks
for Qml-based KCMs, as the Qml component sets its own internal
title, spacing and margins.

Now, we remove the contents margins on Qml-based KCMs so the
can expand to the edges, but keep them on QtWidget ones,
so they remain visually unchanged.

This enforces consistency between different standalone KCMs,
systemsettings sidebar view and systemsettings icon view.

It also removes an ugly extra pixel margin on the right side
caused by the GridLayout spacing.

Co-Authored by: ngraham

BUG: 431855
FIXED-IN: 5.80