src/kcmoduleproxy.cpp
@@ -24,6 +24,7 @@
 #include <KLocalizedString>
 
 #include <kcmoduleloader.h>
+#include <kcmoduleqml_p.h>
 
 #include <KColorScheme>
 
@@ -61,7 +62,6 @@ void KCModuleProxyPrivate::loadModule()
 {
     if (!topLayout) {
         topLayout = new QVBoxLayout(parent);
-        topLayout->setContentsMargins(0, 0, 0, 0);
 
         QString name = modInfo.handle();
         name.replace(QLatin1Char('-'), QLatin1Char('_')); // hyphen is not allowed in dbus, only [A-Z][a-z][0-9]_
@@ -89,6 +89,10 @@ void KCModuleProxyPrivate::loadModule()
         if (kcm->layout()) {
             kcm->layout()->setContentsMargins(0, 0, 0, 0);
         }
+        if (qobject_cast<KCModuleQml *>(kcm)) {
+            topLayout->setContentsMargins(0, 0, 0, 0);
+        }
+
         topLayout->addWidget(kcm);
         if (!modInfo.handle().isEmpty()) {
             QDBusConnection::sessionBus().registerObject(dbusPath, new KSettingsWidgetAdaptor(parent), QDBusConnection::ExportAllSlots);
